# staged-workflow-runner

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE  README.md  SECURITY.md  TEAM_ONBOARDING.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
automation/: __init__.py  create_review_bundle_v2.py  run_responses_supervisor_v2.py  run_responses_v2.py  run_responses_v2_eval.py
automation/evals/: responses_runner_v2.eval.json
automation/responses_runner_v2/: README.md  __init__.py  artifacts.py  attachments.py  contracts.py  model_migration_allowlist.json  openai_client.py  pack_loader.py  review_bundle.py  sidecar.py  supervisor.py  supervisor_agents.py  supervisor_artifacts.py  supervisor_policies.py  workflow.py
automation/tests/: __init__.py  test_responses_runner_v2_attachments.py  test_responses_runner_v2_contracts.py  test_responses_runner_v2_eval.py  test_responses_runner_v2_example_pack.py  test_responses_runner_v2_gstack_pack.py  test_responses_runner_v2_model_migration.py  test_responses_runner_v2_review_bundle.py  test_responses_runner_v2_s05_review_lane_regressions.py  test_responses_runner_v2_supervisor.py  test_responses_runner_v2_supervisory_lane_pack.py  test_responses_runner_v2_workflow.py
docs/: fresh_self_improvement_task_pack.md  stage-workflow-runner-interactive.html  stage-workflow-runner-onboarding.md
docs/design/: architecture-walkthrough.md  supervised-self-improvement-pack.md
docs/runbooks/: first-use-adaptation-example.md  (+7 more)
scripts/: pre-push-secret-scan.sh
(+104 files in other folders)
